// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminApiKey render AdminApiKey 1`] = `
<DocumentFragment>
  .c4 {
  margin-top: 0;
  min-height: calc(100vh - 10.5rem);
}

.c4 td {
  background: #FFFFFF;
}

.c4 .api-keys-data-table-over-flow-menu .cds--popover {
  display: none;
}

.c4 .api-keys-data-table-over-flow-menu .cds--popover-content.cds--tooltip-content {
  display: none;
}

.c4 .cds--data-table thead {
  position: sticky;
  top: 0;
  z-index: 1;
}

.c4 .cds--data-table-content {
  overflow-x: initial;
}

.c4 .api-keys-data-table-key-name {
  width: 15%;
  padding: 1.5rem 1rem;
}

.c4 .api-keys-data-table-key {
  width: 40%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c4 .api-keys-data-table-key-country {
  width: 15%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c4 .api-keys-data-table-validity {
  width: 15%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c4 .api-keys-data-table-validity span {
  display: flex;
  width: 5rem;
}

.c4 .api-keys-data-table-over-flow-menu {
  width: 5%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c4 .api-keys-data-table-row {
  display: flex;
  align-items: center;
  padding: 0.5rem;
  background: #F6F6F6;
  width: 27rem;
}

.c4 .api-keys-data-table-row >p {
  font-size: 0.875rem;
  width: 23.5rem;
  overflow-wrap: break-word;
  height: 2.5rem;
  overflow: hidden;
  line-height: 1.25rem;
}

.c4 .api-keys-data-table-row >.api-keys-replicate-icon {
  margin-left: 1rem;
  cursor: pointer;
}

.c10 {
  color: #474747;
  font-family: Open Sans;
  font-style: normal;
  font-weight: 400;
  line-height: 1rem;
  background: #B9EFCB;
  border-radius: 62rem;
  width: max-content;
  height: 1.5rem;
  padding: 0.3rem 0.5rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c11 {
  color: #474747;
  font-family: Open Sans;
  font-style: normal;
  font-weight: 400;
  line-height: 1rem;
  background: #FFD7D9;
  border-radius: 62rem;
  width: max-content;
  height: 1.5rem;
  padding: 0.3rem 0.5rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c9 {
  display: flex;
  width: 5rem;
}

.c5 {
  display: flex;
  align-items: center;
  justify-items: center;
}

.c1 >h3 {
  color: #FFF;
  font-family: Open Sans;
  font-size: 1.5rem;
  font-style: normal;
  font-weight: 500;
  line-height: 1.75rem;
}

.c1 >p {
  color: #F5F5F5;
  font-family: Open Sans;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.125rem;
}

.c0 {
  padding: 3.75rem 2rem 1rem 1rem;
  background: #222;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c12 .cds--popover {
  display: none;
}

.c2 {
  fill: #fff;
}

.c7 {
  margin-left: 0.5rem;
  color: #277AFF;
  font-size: 0.75rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1rem;
  letter-spacing: 0.02rem;
  text-decoration-line: underline;
  cursor: pointer;
}

.c6 :focus {
  outline: none!important;
}

.c6 .cds--popover-content .cds--toggletip-content {
  padding-top: 0.5rem;
}

.c6 .cds--popover-caret {
  display: none!important;
}

.c8 .list-content {
  margin-top: 0.5rem;
  font-size: 0.75rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1rem;
}

.c3 {
  max-height: calc(100vh - 10.5rem);
}

<div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <h3>
          Api Keys Requests
        </h3>
        <p>
          List of Api Keys
        </p>
      </div>
      <span
        class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
      >
        <div
          class="cds--tooltip-trigger__wrapper"
        >
          <button
            aria-labelledby="tooltip-:r0:"
            class="cds--btn--icon-only cds--btn cds--btn--sm cds--layout--size-sm cds--btn--secondary"
            data-testid="refresh-list"
            title="Refresh"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c2"
              color="white"
              fill="currentColor"
              focusable="false"
              height="14"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 10H6.78A11 11 0 0127 16h2A13 13 0 006 7.68V4H4v8h8zM20 22h5.22A11 11 0 015 16H3a13 13 0 0023 8.32V28h2V20H20z"
              />
            </svg>
             
          </button>
        </div>
        <span
          aria-hidden="true"
          class="cds--popover"
          id="tooltip-:r0:"
          role="tooltip"
        >
          <span
            class="cds--popover-content cds--tooltip-content"
          >
            Refresh
          </span>
          <span
            class="cds--popover-caret"
          />
        </span>
      </span>
    </div>
    <div
      class="scrollbar-container c3 ps"
    >
      <div
        class="c4"
      >
        <div
          class="cds--data-table-content"
        >
          <table
            aria-label="api-keys-data-table"
            class="cds--data-table cds--data-table--lg"
          >
            <thead>
              <tr>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    API Name
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    User
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Country
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Valid till
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Status
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Extension Status
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Action
                  </div>
                </th>
                <th
                  scope="col"
                />
              </tr>
            </thead>
            <tbody
              aria-live="polite"
            >
              <tr>
                <td
                  class="api-keys-data-table-key-name"
                >
                  Giga Meter
                  <span>
                     (private)
                  </span>
                </td>
                <td>
                  <br />
                </td>
                <td
                  class="api-keys-data-table-key-name"
                >
                  <div
                    class="c5"
                  >
                    3
                    <span
                      class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom cds--toggletip c6"
                    >
                      <button
                        aria-controls="id-:ra:"
                        aria-expanded="false"
                        aria-label="Show information"
                        class="cds--toggletip-button"
                        type="button"
                      >
                        <span
                          class="c7"
                        >
                          View list
                          <span
                            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom cds--tooltip"
                          >
                            <div
                              class="cds--tooltip-trigger__wrapper"
                            />
                          </span>
                        </span>
                      </button>
                      <button
                        aria-labelledby="tooltip-:rb:"
                        class="sb-tooltip-trigger"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          style="fill: #000;"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
                          />
                          <path
                            d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
                          />
                        </svg>
                      </button>
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="cds--popover"
                    id="tooltip-:rb:"
                    role="tooltip"
                  >
                    <span
                      class="cds--popover-content cds--tooltip-content"
                    >
                      test
                    </span>
                    <span
                      class="cds--popover-caret"
                    />
                  </span>
                  <span
                    class="cds--popover"
                    id="id-:ra:"
                  >
                    <span
                      class="cds--popover-content c8"
                    >
                      <div
                        class="cds--toggletip-content"
                      >
                        <p
                          class="list-content"
                        >
                          Afghanistan, Botswana, Brazil
                        </p>
                      </div>
                    </span>
                    <span
                      class="cds--popover-caret"
                    />
                  </span>
                </td>
                <td>
                  <span
                    class="c9"
                  >
                    03-09-2024
                  </span>
                </td>
                <td>
                  <div
                    class="c10"
                    color="#B9EFCB"
                  >
                    Active
                  </div>
                </td>
                <td />
                <td
                  class="api-keys-data-table-over-flow-menu"
                />
                <td
                  class="api-keys-data-table-over-flow-menu"
                />
              </tr>
              <tr>
                <td
                  class="api-keys-data-table-key-name"
                >
                  Giga Meter
                  <span>
                     (private)
                  </span>
                </td>
                <td>
                  <br />
                </td>
                <td
                  class="api-keys-data-table-key-name"
                >
                  <div
                    class="c5"
                  >
                    249
                    <span
                      class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom cds--toggletip c6"
                    >
                      <button
                        aria-controls="id-:rc:"
                        aria-expanded="false"
                        aria-label="Show information"
                        class="cds--toggletip-button"
                        type="button"
                      >
                        <span
                          class="c7"
                        >
                          View list
                          <span
                            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom cds--tooltip"
                          >
                            <div
                              class="cds--tooltip-trigger__wrapper"
                            />
                          </span>
                        </span>
                      </button>
                      <button
                        aria-labelledby="tooltip-:rd:"
                        class="sb-tooltip-trigger"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          style="fill: #000;"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
                          />
                          <path
                            d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
                          />
                        </svg>
                      </button>
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="cds--popover"
                    id="tooltip-:rd:"
                    role="tooltip"
                  >
                    <span
                      class="cds--popover-content cds--tooltip-content"
                    >
                      test
                    </span>
                    <span
                      class="cds--popover-caret"
                    />
                  </span>
                  <span
                    class="cds--popover"
                    id="id-:rc:"
                  >
                    <span
                      class="cds--popover-content c8"
                    >
                      <div
                        class="cds--toggletip-content"
                      >
                        <p
                          class="list-content"
                        >
                          Afghanistan, Åland Islands, Albania, Algeria, Andorra, Angola, Anguilla, Antarctica, Antigua and Barbuda, Argentina, Armenia, Aruba, Australia, Austria, Azerbaijan, Bahamas, Bahrain, Bangladesh, Barbados, Belarus, Belgium, Belize, Benin, Bermuda, Bhutan, Bolivia (Plurinational State of), Bonaire, Bosnia and Herzegovina, Botswana, Bouvet Island, Brazil, British Virgin Islands, Brunei Darussalam, Bulgaria, Burkina Faso, Burundi, Cabo Verde, Cambodia, Cameroon, Canada, Cayman Islands, Central African Republic, Chad, Chagos Archipelagio, Chile, China, Christmas Island, Cocos (Keeling) Islands, Colombia, Comoros, Congo, Cook Islands, Costa Rica, Côte d'Ivoire, Croatia, Cuba, Curaçao, Cyprus, Czechia, Democratic People's Republic of Korea, Democratic Republic of the Congo, Denmark, Djibouti, Dominica, Dominican Republic, Ecuador, Egypt, El Salvador, Equatorial Guinea, Eritrea, Estonia, Eswatini, Ethiopia, Falkland Islands (Malvinas), Faroe Islands, Fiji, Finland, France, French Guiana, French Polynesia, French Southern Territories, Gabon, Gambia, Georgia, Germany, Ghana, Gibraltar, Greece, Greenland, Grenada, Guadeloupe, Guam, Guatemala, Guernsey, Guinea, Guinea-Bissau, Guyana, Haiti, Heard Island and McDonald Islands, Holy See, Honduras, Hong Kong, Hungary, Iceland, India, Indonesia, Iran (Islamic Republic of), Iraq, Ireland, Isle of Man, Israel, Italy, Jamaica, Japan, Jersey, Jordan, Kazakhstan, Kenya, Kiribati, Kosovo, Kuwait, Kyrgyzstan, Lao People's Democratic Republic, Latvia, Lebanon, Lesotho, Liberia, Libya, Liechtenstein, Lithuania, Luxembourg, Macao, Madagascar, Malawi, Malaysia, Maldives, Mali, Malta, Marshall Islands, Martinique, Mauritania, Mauritius, Mayotte, Mexico, Micronesia (Federated States of), Midway Islands, Monaco, Mongolia, Montenegro, Montserrat, Morocco, Mozambique, Myanmar, Namibia, Nauru, Nepal, Netherlands, New Caledonia, New Zealand, Nicaragua, Niger, Nigeria, Niue, Norfolk Island, Northern Mariana Islands, Norway, Oman, Pakistan, Palau, Palestine, Panama, Papua New Guinea, Paraguay, Peru, Philippines, Pitcairn, Poland, Portugal, Puerto Rico, Qatar, Republic of Korea, Republic of Moldova, Réunion, Romania, Russian Federation, Rwanda, Saint Barthélemy, Saint Helena, Saint Kitts and Nevis, Saint Lucia, Saint Martin, Saint Pierre et Miquelon, Saint Vincent and the Grenadines, Samoa, San Marino, Sao Tome and Principe, Saudi Arabia, Senegal, Serbia, Seychelles, Sierra Leone, Singapore, Sint Maarten, Slovakia, Slovenia, Solomon Islands, Somalia, South Africa, South Georgia and the South Sandwich Islands, South Sudan, Spain, Sri Lanka, Sudan, Suriname, Svalbard and Jan Mayen Islands, Sweden, Switzerland, Syrian Arab Republic, Taiwan, Tajikistan, Thailand, The former Yugoslav Republic of Macedonia, Timor-Leste, Togo, Tokelau, Tonga, Trinidad and Tobago, Tunisia, Turkey, Turkmenistan, Turks and Caicos Islands, Tuvalu, Uganda, Ukraine, United Arab Emirates, United Kingdom of Great Britain & Northern Ireland, United Republic of Tanzania, United States of America, United States Virgin Islands, Uruguay, Uzbekistan, Vanuatu, Venezuela, Viet Nam, Wallis and Futuna, Western Sahara, Yemen, Zambia, Zimbabwe
                        </p>
                      </div>
                    </span>
                    <span
                      class="cds--popover-caret"
                    />
                  </span>
                </td>
                <td>
                  <span
                    class="c9"
                  >
                    03-09-2024
                  </span>
                </td>
                <td>
                  <div
                    class="c10"
                    color="#B9EFCB"
                  >
                    Active
                  </div>
                </td>
                <td />
                <td
                  class="api-keys-data-table-over-flow-menu"
                />
                <td
                  class="api-keys-data-table-over-flow-menu"
                />
              </tr>
              <tr>
                <td
                  class="api-keys-data-table-key-name"
                >
                  Giga Meter
                  <span>
                     (private)
                  </span>
                </td>
                <td>
                  <br />
                </td>
                <td
                  class="api-keys-data-table-key-name"
                >
                  <div
                    class="c5"
                  >
                    -
                  </div>
                </td>
                <td>
                  <span
                    class="c9"
                  >
                    24-06-2024
                  </span>
                </td>
                <td>
                  <div
                    class="c11"
                    color="#FFD7D9"
                  >
                    Expired
                  </div>
                </td>
                <td />
                <td
                  class="api-keys-data-table-over-flow-menu"
                />
                <td
                  class="api-keys-data-table-over-flow-menu"
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="ps__rail-x"
        style="left: 0px; top: 0px;"
      >
        <div
          class="ps__thumb-x"
          style="left: 0px; width: 0px;"
          tabindex="0"
        />
      </div>
      <div
        class="ps__rail-y"
        style="top: 0px; left: 0px;"
      >
        <div
          class="ps__thumb-y"
          style="top: 0px; height: 0px;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="cds--pagination cds--pagination--md c12"
    >
      <div
        class="cds--pagination__left"
      >
        <label
          class="cds--pagination__text"
          for="cds-pagination-select-:re:"
          id="cds-pagination-select-:re:-count-label"
        >
          Items per page
        </label>
        <div
          class="cds--form-item cds--select__item-count"
        >
          <div
            class="cds--select cds--select--inline"
          >
            <div
              class="cds--select-input--inline__wrapper"
            >
              <div
                class="cds--select-input__wrapper"
              >
                <select
                  class="cds--select-input"
                  id="cds-pagination-select-:re:"
                  title=""
                >
                  <option
                    class="cds--select-option"
                    value="10"
                  >
                    10
                  </option>
                  <option
                    class="cds--select-option"
                    value="20"
                  >
                    20
                  </option>
                  <option
                    class="cds--select-option"
                    value="50"
                  >
                    50
                  </option>
                  <option
                    class="cds--select-option"
                    value="100"
                  >
                    100
                  </option>
                  <option
                    class="cds--select-option"
                    value="500"
                  >
                    500
                  </option>
                </select>
                <svg
                  aria-hidden="true"
                  class="cds--select__arrow"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <span
          class="cds--pagination__text cds--pagination__items-count"
        >
          1–3 of 3 items
        </span>
      </div>
      <div
        class="cds--pagination__right"
      >
        <div
          class="cds--form-item cds--select__page-number"
        >
          <div
            class="cds--select cds--select--inline"
          >
            <label
              class="cds--label cds--visually-hidden"
              for="cds-pagination-select-:re:-right"
            >
              Page number, of 1 pages
            </label>
            <div
              class="cds--select-input--inline__wrapper"
            >
              <div
                class="cds--select-input__wrapper"
              >
                <select
                  class="cds--select-input"
                  id="cds-pagination-select-:re:-right"
                  title=""
                >
                  <option
                    class="cds--select-option"
                    value="1"
                  >
                    1
                  </option>
                </select>
                <svg
                  aria-hidden="true"
                  class="cds--select__arrow"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <span
          class="cds--pagination__text"
        >
          of 1 page
        </span>
        <div
          class="cds--pagination__control-buttons"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip cds--icon-tooltip--disabled"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-labelledby="tooltip-:rf:"
                class="cds--btn--icon-only cds--pagination__button cds--pagination__button--backward cds--pagination__button--no-index cds--btn cds--btn--ghost cds--btn--disabled"
                disabled=""
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 24L10 16 20 8z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-:rf:"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Previous page
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top-right cds--tooltip cds--icon-tooltip cds--icon-tooltip--disabled"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-labelledby="tooltip-:rh:"
                class="cds--btn--icon-only cds--pagination__button cds--pagination__button--forward cds--pagination__button--no-index cds--btn cds--btn--ghost cds--btn--disabled"
                disabled=""
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8L22 16 12 24z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-:rh:"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Next page
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AdminApiKey render with empty AdminApiKey 1`] = `
<DocumentFragment>
  .c4 {
  margin-top: 0;
  min-height: calc(100vh - 10.5rem);
}

.c4 td {
  background: #FFFFFF;
}

.c4 .api-keys-data-table-over-flow-menu .cds--popover {
  display: none;
}

.c4 .api-keys-data-table-over-flow-menu .cds--popover-content.cds--tooltip-content {
  display: none;
}

.c4 .cds--data-table thead {
  position: sticky;
  top: 0;
  z-index: 1;
}

.c4 .cds--data-table-content {
  overflow-x: initial;
}

.c4 .api-keys-data-table-key-name {
  width: 15%;
  padding: 1.5rem 1rem;
}

.c4 .api-keys-data-table-key {
  width: 40%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c4 .api-keys-data-table-key-country {
  width: 15%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c4 .api-keys-data-table-validity {
  width: 15%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c4 .api-keys-data-table-validity span {
  display: flex;
  width: 5rem;
}

.c4 .api-keys-data-table-over-flow-menu {
  width: 5%;
  padding: 1.5rem 1rem;
  background-color: #FFFFFF;
}

.c4 .api-keys-data-table-row {
  display: flex;
  align-items: center;
  padding: 0.5rem;
  background: #F6F6F6;
  width: 27rem;
}

.c4 .api-keys-data-table-row >p {
  font-size: 0.875rem;
  width: 23.5rem;
  overflow-wrap: break-word;
  height: 2.5rem;
  overflow: hidden;
  line-height: 1.25rem;
}

.c4 .api-keys-data-table-row >.api-keys-replicate-icon {
  margin-left: 1rem;
  cursor: pointer;
}

.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  padding: 1rem;
  font-size: 0.9rem;
  color: #fff;
}

.c1 >h3 {
  color: #FFF;
  font-family: Open Sans;
  font-size: 1.5rem;
  font-style: normal;
  font-weight: 500;
  line-height: 1.75rem;
}

.c1 >p {
  color: #F5F5F5;
  font-family: Open Sans;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: 400;
  line-height: 1.125rem;
}

.c0 {
  padding: 3.75rem 2rem 1rem 1rem;
  background: #222;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 .cds--popover {
  display: none;
}

.c2 {
  fill: #fff;
}

.c3 {
  max-height: calc(100vh - 10.5rem);
}

<div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <h3>
          Api Keys Requests
        </h3>
        <p>
          List of Api Keys
        </p>
      </div>
      <span
        class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
      >
        <div
          class="cds--tooltip-trigger__wrapper"
        >
          <button
            aria-labelledby="tooltip-:rj:"
            class="cds--btn--icon-only cds--btn cds--btn--sm cds--layout--size-sm cds--btn--secondary"
            data-testid="refresh-list"
            title="Refresh"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c2"
              color="white"
              fill="currentColor"
              focusable="false"
              height="14"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 10H6.78A11 11 0 0127 16h2A13 13 0 006 7.68V4H4v8h8zM20 22h5.22A11 11 0 015 16H3a13 13 0 0023 8.32V28h2V20H20z"
              />
            </svg>
             
          </button>
        </div>
        <span
          aria-hidden="true"
          class="cds--popover"
          id="tooltip-:rj:"
          role="tooltip"
        >
          <span
            class="cds--popover-content cds--tooltip-content"
          >
            Refresh
          </span>
          <span
            class="cds--popover-caret"
          />
        </span>
      </span>
    </div>
    <div
      class="scrollbar-container c3 ps"
    >
      <div
        class="c4"
      >
        <div
          class="cds--data-table-content"
        >
          <table
            aria-label="api-keys-data-table"
            class="cds--data-table cds--data-table--lg"
          >
            <thead>
              <tr>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    API Name
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    User
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Country
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Valid till
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Status
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Extension Status
                  </div>
                </th>
                <th
                  scope="col"
                >
                  <div
                    class="cds--table-header-label"
                  >
                    Action
                  </div>
                </th>
                <th
                  scope="col"
                />
              </tr>
            </thead>
            <tbody
              aria-live="polite"
            />
          </table>
        </div>
      </div>
      <div
        class="c5"
      >
        No data found
      </div>
      <div
        class="ps__rail-x"
        style="left: 0px; top: 0px;"
      >
        <div
          class="ps__thumb-x"
          style="left: 0px; width: 0px;"
          tabindex="0"
        />
      </div>
      <div
        class="ps__rail-y"
        style="top: 0px; left: 0px;"
      >
        <div
          class="ps__thumb-y"
          style="top: 0px; height: 0px;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="cds--pagination cds--pagination--md c6"
    >
      <div
        class="cds--pagination__left"
      >
        <label
          class="cds--pagination__text"
          for="cds-pagination-select-:rt:"
          id="cds-pagination-select-:rt:-count-label"
        >
          Items per page
        </label>
        <div
          class="cds--form-item cds--select__item-count"
        >
          <div
            class="cds--select cds--select--inline"
          >
            <div
              class="cds--select-input--inline__wrapper"
            >
              <div
                class="cds--select-input__wrapper"
              >
                <select
                  class="cds--select-input"
                  id="cds-pagination-select-:rt:"
                  title=""
                >
                  <option
                    class="cds--select-option"
                    value="10"
                  >
                    10
                  </option>
                  <option
                    class="cds--select-option"
                    value="20"
                  >
                    20
                  </option>
                  <option
                    class="cds--select-option"
                    value="50"
                  >
                    50
                  </option>
                  <option
                    class="cds--select-option"
                    value="100"
                  >
                    100
                  </option>
                  <option
                    class="cds--select-option"
                    value="500"
                  >
                    500
                  </option>
                </select>
                <svg
                  aria-hidden="true"
                  class="cds--select__arrow"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <span
          class="cds--pagination__text cds--pagination__items-count"
        >
          1–1 of 1 items
        </span>
      </div>
      <div
        class="cds--pagination__right"
      >
        <div
          class="cds--form-item cds--select__page-number"
        >
          <div
            class="cds--select cds--select--inline"
          >
            <label
              class="cds--label cds--visually-hidden"
              for="cds-pagination-select-:rt:-right"
            >
              Page number, of 1 pages
            </label>
            <div
              class="cds--select-input--inline__wrapper"
            >
              <div
                class="cds--select-input__wrapper"
              >
                <select
                  class="cds--select-input"
                  id="cds-pagination-select-:rt:-right"
                  title=""
                >
                  <option
                    class="cds--select-option"
                    value="1"
                  >
                    1
                  </option>
                </select>
                <svg
                  aria-hidden="true"
                  class="cds--select__arrow"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <span
          class="cds--pagination__text"
        >
          of 1 page
        </span>
        <div
          class="cds--pagination__control-buttons"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip cds--icon-tooltip--disabled"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-labelledby="tooltip-:ru:"
                class="cds--btn--icon-only cds--pagination__button cds--pagination__button--backward cds--pagination__button--no-index cds--btn cds--btn--ghost cds--btn--disabled"
                disabled=""
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 24L10 16 20 8z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-:ru:"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Previous page
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top-right cds--tooltip cds--icon-tooltip cds--icon-tooltip--disabled"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-labelledby="tooltip-:r10:"
                class="cds--btn--icon-only cds--pagination__button cds--pagination__button--forward cds--pagination__button--no-index cds--btn cds--btn--ghost cds--btn--disabled"
                disabled=""
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8L22 16 12 24z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-:r10:"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Next page
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
